added SupressWarning and Overrides and some minor fixes, so that the compiler is happy